# spaceway

./: .envrc  .gitignore  ANALYZING_TEST_OUTPUT.md  AUTOMATED_TESTING.md  AUTOMATED_TESTING_README.md  AUTOMATION_SUMMARY.md  BETA_QUICK_START.md  BETA_TESTING.md  BUILD_DEPLOY_TAB.md  CLI_QUICK_START.md  Cargo.toml  DASHBOARD_RUNNING.md  DEADLOCK_FIX.md  DEBUG_OUTPUT_GUIDE.md  DHT_IMPROVEMENTS.md  DUPLICATE_SIGNATURE_KEY_EXPLAINED.md  FEATURE_ROADMAP.md  FIXED_SPACE_LIST.md  FIX_JSON_PARSE_ERROR.md  GETTING_STARTED.md  GOSSIPSUB_HANG_DEBUG.md  GOSSIPSUB_INTEGRATION.md  HOW_TO_ADD_TO_MLS.md  INVITE_FEATURE_GUIDE.md  MLS_CLI_COMMANDS_ADDED.md  MLS_E2EE_IMPLEMENTATION.md  MULTIPLE_DEADLOCK_FIXES.md  MULTI_PEER_TESTING.md  NETWORK_ARCHITECTURE_EXPLAINED.md  NETWORK_CONNECTIVITY_ISSUE.md  NETWORK_STATUS.txt  NEXT_STEPS.md  NEXT_STEPS_RECOMMENDATION.md  PERMISSIONS_DESIGN.md  PERMISSION_TESTS_STATUS.md  PHASE1_IMPLEMENTATION.md  PHASE2_5_PERMISSIONS_STATUS.md  PHASE2_COMPLETE.md  PHASE2_STATUS.md  QUICK_DHT_SUMMARY.md  (+39 more)
cli/: Cargo.toml
cli/src/: account.rs  commands.rs  main.rs  ui.rs
core/: Cargo.toml
core/descord-data/: IDENTITY  LOG  LOG.old.1763676288910164
core/descord-data/db/: IDENTITY  LOG
core/examples/: test_three_person.rs  three_peer_demo.rs
core/src/: client.rs  dashboard.rs  lib.rs  permissions.rs  types.rs  version.rs
core/src/crdt/: convergence_tests.rs  dht_storage.rs  hlc.rs  holdback.rs  mod.rs  ops.rs  validator.rs
core/src/crypto/: mod.rs  signing.rs
core/src/forum/: channel.rs  mod.rs  space.rs  space_metadata.rs  thread.rs
core/src/mls/: group.rs  keypackage.rs  mod.rs  provider.rs
core/src/network/: gossip_metrics.rs  mod.rs  node.rs  relay.rs
core/src/smoothtest/: consistency.rs  mod.rs  smooth_batch.rs  smooth_client.rs
core/src/storage/: blob.rs  compression.rs  crdt.rs  dht_blob.rs  indices.rs  lazy.rs  mod.rs  relay_cache.rs  store.rs  sync.rs
core/test-alice-data/: IDENTITY  LOG
core/test-alice-data/db/: IDENTITY  LOG
core/test-alice-kick-data/: IDENTITY  LOG
core/test-alice-kick-data/db/: IDENTITY  LOG
core/test-bob-kick-data/: IDENTITY  LOG
core/test-bob-kick-data/db/: IDENTITY  LOG
core/test-data/alice-dht-space-1/: IDENTITY  LOG
core/test-data/alice-dht-space-2/: IDENTITY  LOG
core/test-data/bob-dht-space-1/: IDENTITY  LOG
core/test-data/bob-dht-space-2/: IDENTITY  LOG
core/test-data/privacy-default/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1763596951584405  MANIFEST-000010  MANIFEST-000015
core/test-data/privacy-hidden/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1763596951584445  LOG.old.1763598497495995  MANIFEST-000010  MANIFEST-000015
core/test-data/privacy-join/: IDENTITY  LOG  LOG.old.1763596951583705  LOG.old.1763598497496488
core/test-data/privacy-private/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1763596951584266  MANIFEST-000010  MANIFEST-000015
core/test-data/privacy-public/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1763596951584032  MANIFEST-000010  MANIFEST-000015  OPTIONS-000012
core/test-data/test-dht-check/: IDENTITY  LOG
core/test-data/test_alice/: LOG
core/test-data/test_already_member_admin/: 000018.sst  000033.sst  000036.sst  000041.sst  000046.sst  000056.sst  IDENTITY  LOG  LOG.old.1763593835572435  LOG.old.1763594023132460  LOG.old.1763594220641611  LOG.old.1763594399803301  LOG.old.1763596364434203  LOG.old.1763596511084431  LOG.old.1763596628123397  LOG.old.1763596950765522  LOG.old.1763598495322893  MANIFEST-000048  MANIFEST-000053
core/test-data/test_blob_storage/: LOG
core/test-data/test_bob/: LOG
core/test-data/test_concurrent_alice/: LOG
core/test-data/test_concurrent_bob/: LOG
core/test-data/test_crdt_1/: LOG
core/test-data/test_crdt_2/: LOG
core/test-data/test_create_invite/: 000033.sst  000036.sst  000041.sst  000046.sst  000056.sst  IDENTITY  LOG  LOG.old.1763593835572898  LOG.old.1763594023132584  LOG.old.1763594220643621  LOG.old.1763594399802376  LOG.old.1763596364432201  LOG.old.1763596511085203  LOG.old.1763596628123907  LOG.old.1763596950765914  MANIFEST-000048  MANIFEST-000053
core/test-data/test_default_visibility/: 000008.sst  000013.sst  000018.sst  000023.sst  000030.sst  000035.sst  000040.sst  000045.sst  IDENTITY  LOG  LOG.old.1763592950732579  LOG.old.1763594400503105  LOG.old.1763596381698664  LOG.old.1763596511955448  LOG.old.1763596629563943  LOG.old.1763596952049936  LOG.old.1763598498347112  MANIFEST-000010  MANIFEST-000042  MANIFEST-000047
core/test-data/test_hidden_visibility/: 000008.sst  000013.sst  000018.sst  000023.sst  000030.sst  000037.sst  000042.sst  000047.sst  IDENTITY  LOG  LOG.old.1763592950734074  LOG.old.1763594400503493  LOG.old.1763596381700145  LOG.old.1763596511956527  LOG.old.1763596629564889  LOG.old.1763596952049104  LOG.old.1763598498347343  MANIFEST-000010  MANIFEST-000044  MANIFEST-000049
core/test-data/test_invalid_admin/: 000008.sst  000013.sst  000018.sst  000023.sst  000030.sst  000035.sst  000040.sst  000045.sst  000052.sst  IDENTITY  LOG  LOG.old.1763593835574002  LOG.old.1763594023136085  LOG.old.1763594220643621  LOG.old.1763594399804230  (+6 more)
core/tests/: auto_dht_integration_test.rs  beta_test.rs  blob_replication_test.rs  crdt_replication_test.rs  dht_query_test.rs  dht_space_metadata_test.rs  full_relay_integration_test.rs  gossipsub_integration.rs  integration_test.rs  invite_system_test.rs  network_integration_test.rs  offline_join_test.rs  permission_demo.rs  permission_demo_simple.rs  permission_tests.rs  permissions_test.rs  privacy_tiers_test.rs  relay_discovery_test.rs  relay_only_mode_test.rs  simple_3peer_test.rs  space_visibility_test.rs  storage_integration_test.rs  test_dht_smooth.rs  test_kick_member.rs  test_mls_add_member.rs  test_mls_add_member_integration.rs  test_mls_encryption_security.rs  test_mls_kick.rs  test_mls_smooth.rs  test_smooth_basic.rs  three_person_test.rs  two_user_gossip_test.rs  user_relay_test.rs
dashbard/dashboard-backend/: Cargo.toml
relay/: Cargo.toml  DEV_GUIDE.md  LOGGING.md  README.md
relay/src/: main.rs
(+453 files in other folders)
