[package]
name = "spaceway-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
minicbor = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

# MLS
openmls = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_basic_credential = { workspace = true }

# CRDT
crdts = { workspace = true }

# Networking
libp2p = { workspace = true }
quinn = { workspace = true }

# Storage
rocksdb = { workspace = true }
sha2 = "0.10"              # SHA256 hashing for content addressing
aes-gcm = "0.10"           # AES-256-GCM encryption
hkdf = "0.12"              # HKDF key derivation
bincode = "1.3"            # Binary serialization for blobs
hex = "0.4"                # Hex encoding for blob hashes
lz4 = "1.24"               # Fast compression (Phase 3)

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde_json = "1.0"
zeroize = "1.7"            # Secure memory wiping for keys

# Test utilities (only when test-utils feature is enabled)
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
tempfile = "3.8"
hex = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
tracing-subscriber = "0.3"

[lib]
name = "spaceway_core"
path = "src/lib.rs"

[features]
# Enable test helper methods for integration tests
test-helpers = []
# Enable SmoothTest framework for testing distributed features
test-utils = ["dep:tempfile"]

[[example]]
name = "test_three_person"
path = "examples/test_three_person.rs"
