[package]
name = "descord-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
descord-core = { path = "../core" }

# Async
tokio = { workspace = true }

# Serialization
minicbor = { workspace = true }

# Networking
libp2p = { workspace = true }
quinn = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "descord-relay"
path = "src/main.rs"
