[package]
name = "descord-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
descord-core = { path = "../core" }

# Async
tokio = { workspace = true, features = ["full"] }

# Serialization
minicbor = { workspace = true }

# Networking
libp2p = { workspace = true, features = ["tcp", "noise", "yamux", "gossipsub", "kad", "relay", "macros"] }
quinn = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "descord-relay"
path = "src/main.rs"
